<resources>
    <string name="app_name">Calculadora</string>
    <string name="title">Seja bem vindo ao nosso App</string>
    <string name="signIn">Entrar</string>
    <string name="calculadora">Calculadora</string>
    <string name="somar_numeros">Somar números</string>
    <string name="subtrair_numeros">Subtrair números</string>
    <string name="multiplicar_numeros">Multiplicar números</string>
    <string name="dividir_numeros">Dividir números</string>
    <string name="calculo_de_viagem">Cálculo de viagem</string>
    <string name="distancia_total_em_km">Distância total (em km)</string>
    <string name="preco_do_combustivel_rs_por_litro">Preço do combustível (R$ por litro)</string>
    <string name="consumo_medio_do_veiculo_km_l">Consumo médio do veículo (km/l)</string>
    <string name="calcular">Calcular</string>
    <string name="voltar">Voltar</string>
    <string name="ex_12">Ex: 12</string>
    <string name="ex_5_50">Ex: 5.50</string>
    <string name="ex_300">Ex: 300</string>
</resources>